--- a/src/locale/zh_CN.json
+++ b/src/locale/zh_CN.json
@@ -1,3 +1,12 @@
 {
-  "你好": "你好"
+  "你好": "你好",
+  "首页": "首页",
+  "系统管理": "系统管理",
+  "用户管理": "用户管理",
+  "菜单管理": "菜单管理",
+  "角色管理": "角色管理",
+  "部门管理": "部门管理",
+  "个人中心": "个人中心",
+  "设置": "设置",
+  "退出": "退出"
 }
